# bens-backtesting-framework

./: README.md  engine.py  main.py  order.py  pyproject.toml  strategy.py  trade.py
core/: consts.py  engine.py  order.py  strategy.py  trade.py
examples/: buynsell_switch.py
