[project]
name = "bens-backtesting-framework"
version = "0.1.0"
description = "A simple backtesting framework"
authors = [
    {name = "benlellouch",email = "blellouch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "yfinance (>=0.2.54,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
